--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./style/main.css">
 </head>
 <body>
+    <!------Header Started--------->
     <header>
         <div>
             <img src="./assets/images/logo/logo.svg" alt="">
@@ -28,5 +29,62 @@
             </ul>
         </nav>
     </header>
+<!------- footer Started -------->
+<footer>
+    <div class="coloumn_one">
+        <div>
+            <img src="./assets/images/logo/logo.svg" alt="">            
+        </div>
+        <p class = "Into_Para">
+                We make sure that your safety is never compromised. 
+                This is why we hire all the staff under the roof of Home 
+                Comfort, just for your satisfaction.
+        </p>
+        
+    </div>
+    <div class="coloumn_two">
+        <ul>
+            <li id = "Item_Home">
+                Home
+            </li>
+            <li>
+                Services
+            </li>
+            <li>
+                Contact Us
+            </li>
+        </ul>
+    </div>
+    <div class="coloumn_twoo">
+        <ul>
+            <li>
+                Facebook
+            </li>
+            <li>
+                Twitter
+            </li>
+            <li>
+                LinkedIn
+            </li>
+            <li>
+                Instagram
+            </li>
+        </ul>
+    </div>
+    <div class="coloumn_three">
+        <ul>
+            <li>
+                +971 58 67 47 123
+            </li>
+            <li>
+                info@homecomfort.com
+            </li>
+        </ul>
+        <div class="news_letter">
+            <input type="text" placeholder="Enter Email">
+            <button>send</button>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
