--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./style/main.css">
 </head>
+
 <body>
     <!------Header Started--------->
     <header>
@@ -29,62 +31,146 @@
             </ul>
         </nav>
     </header>
-<!------- footer Started -------->
-<footer>
-    <div class="coloumn_one">
-        <div>
-            <img src="./assets/images/logo/logo.svg" alt="">            
+
+    <!-- Bannner -->
+    <section class="banner_section">
+        <div class="page_width">
+            <div class="banner_inner_section">
+                <div class="banner_content">
+                    <small>Best in Dubai</small>
+                    <p class="intro">Welcome To</p>
+                    <h2>Home <span>Comfort</span></h2>
+                    <p class="description">
+                        Home Comfort provides home repair services in Dubai with reasonable rates. We fix it right with
+                        home comfort professional experts.
+                    </p>
+                    <div class="banner_button">
+                        <button class="btn btn_1">Contact US</button>
+                        <button class="btn btn_2">Learn More</button>
+                    </div>
+                </div>
+                <div class="banner_img">
+                    <img src="./assets/images/home/banner/banner.svg" alt="">
+                </div>
+            </div>
+
+            <div class="Banner_Who_are_we">
+                <div class="Who_are_we_img">
+                    <img src="./assets/images/home/who_img.jpg" alt="">
+                </div>
+                <div class="Who_are_we_content">
+                    <h2>
+                        Who we <span>Are?</span>
+                    </h2>
+                    <p class="Our_Intro">
+                        Home Comfort is a leading multiple service provider company catering to your 360 needs with
+                        quality guaranteed. The aim and priority of Home Comfort are to add value to our consumers’
+                        lives by providing smart solutions to all their problems. Our pride is providing the most
+                        extensive range of services. From home maintenance to personal assistance.
+                    </p>
+                    <p class="Our_Intro">
+                        We make sure that your safety is never compromised. This is why we hire all the staff under the
+                        roof of Home Comfort, just for your satisfaction. Our goal is to become the largest and most
+                        famous online home services platform and provide our customers with the best of services and
+                        experience. Our experts will give you the most satisfying experience and professionalism. On
+                        your demand, all of our best home maintenance and renovation services are available at the very
+                        right time and place.
+                    </p>
+                </div>
+            </div>
+
+            <div class="Company_Authority">
+                <div>
+                    <h2>
+                        Company <span>Authority</span>
+                    </h2>
+                    <p class="Company_Intro">
+                        Basically, finding the right person to do up the works is very much important and for that,
+                        there are certain things you should keep in mind while appointing a service man. Analyze the
+                        best service provider who can perform the works well and give you desired results. You can
+                        search for professional home service companies online and get the best company that meets up
+                        your demands.
+                    </p>
+                    <p class="Company_Intro">
+                        Home Comfort is a leading multiple service provider company catering to your 360 needs with
+                        quality guaranteed. The aim and priority of Home Comfort are to add value to our consumers’
+                        lives by providing smart solutions to all their problems. Our pride is providing the most
+                        extensive range of services. From home maintenance to personal assistance.
+                    </p>
+                </div>
+                <div>
+                    2
+                </div>
+            </div>
+
         </div>
-        <p class = "Into_Para">
-                We make sure that your safety is never compromised. 
-                This is why we hire all the staff under the roof of Home 
+
+
+
+    </section>
+
+
+    <!------- footer Started -------->
+    <footer>
+        <div class="coloumn_one">
+            <div>
+                <img src="./assets/images/logo/logo.svg" alt="">
+            </div>
+            <p class="Into_Para">
+                We make sure that your safety is never compromised.
+                This is why we hire all the staff under the roof of Home
                 Comfort, just for your satisfaction.
-        </p>
-        
-    </div>
-    <div class="coloumn_two">
-        <ul>
-            <li id = "Item_Home">
-                Home
-            </li>
-            <li>
-                Services
-            </li>
-            <li>
-                Contact Us
-            </li>
-        </ul>
-    </div>
-    <div class="coloumn_twoo">
-        <ul>
-            <li>
-                Facebook
-            </li>
-            <li>
-                Twitter
-            </li>
-            <li>
-                LinkedIn
-            </li>
-            <li>
-                Instagram
-            </li>
-        </ul>
-    </div>
-    <div class="coloumn_three">
-        <ul>
-            <li>
-                +971 58 67 47 123
-            </li>
-            <li>
-                info@homecomfort.com
-            </li>
-        </ul>
-        <div class="news_letter">
-            <input type="text" placeholder="Enter Email">
-            <button>send</button>
+            </p>
+
         </div>
-    </div>
-</footer>
+        <div class="coloumn_two">
+            <ul>
+                <li id="Item_Home">
+                    Home
+                </li>
+                <li>
+                    Services
+                </li>
+                <li>
+                    Contact Us
+                </li>
+            </ul>
+        </div>
+        <div class="coloumn_twoo">
+            <ul>
+                <li>
+                    Facebook
+                </li>
+                <li>
+                    Twitter
+                </li>
+                <li>
+                    LinkedIn
+                </li>
+                <li>
+                    Instagram
+                </li>
+            </ul>
+        </div>
+        <div class="coloumn_three">
+            <ul>
+                <li>
+                    +971 58 67 47 123
+                </li>
+                <li>
+                    info@homecomfort.com
+                </li>
+            </ul>
+            <div class="news_letter">
+                <input type="text" placeholder="Enter Email">
+                <button>send</button>
+            </div>
+        </div>
+    </footer>
+    <hr>
+    <p class="Copyright">
+        @Copyrights reserved by HomeComfort
+    </p>
 </body>
+
 </html>
