--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
                         extensive range of services. From home maintenance to personal assistance.
                     </p>
                 </div>
-                <div>
-                    2
+                <div class="Company_Auth_Img">
+                    <img src="./assets/images/home/banner/banner.svg" alt="">
                 </div>
             </div>
 
