--- a/index.html
+++ b/index.html
@@ -54,6 +54,52 @@
                 </div>
             </div>
 
+
+
+
+        </div>
+
+
+
+    </section>
+
+    <section class="services">
+        <div class="page_width">
+            <div class="services-row-one">
+                <div>
+                    1.1
+                </div>
+                <div>
+                    1.2
+                </div>
+                <div>
+                    <img src="./assets/images/home/banner/team.svg" alt="">
+                    <p>Experienced Team</p>
+                </div>
+            </div>
+            <div class="services-row-two">
+                <h2>Explore our <span>Services</span>
+                </h2>
+            </div>
+            <div class="services-row-three">
+                <div>
+                    <img src="./assets/images/home/service_img.png" alt="">
+                </div>
+                <div>
+                    3.2
+                </div>
+                <div>
+                    3.3
+                </div>
+                <div>
+                    3.4
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="page_width">
             <div class="Banner_Who_are_we">
                 <div class="Who_are_we_img">
                     <img src="./assets/images/home/who_img.jpg" alt="">
@@ -78,7 +124,11 @@
                     </p>
                 </div>
             </div>
+        </div>
+    </section>
 
+    <section>
+        <div class="page_width">
             <div class="Company_Authority">
                 <div>
                     <h2>
@@ -99,17 +149,35 @@
                     </p>
                 </div>
                 <div class="Company_Auth_Img">
-                    <img src="./assets/images/home/banner/banner.svg" alt="">
+                    <img src="./assets/images/home/banner/company.svg" alt="">
                 </div>
             </div>
-
         </div>
-
-
-
     </section>
 
+    <section class="Our_Clients">
+        <div class="page_width">
+            <div>
+                <h2>Our
+                    <span>Clients</span>
+                </h2>
+            </div>
+            <div class="Clients_Para">
+                <p>We make sure that your safety is never compromised. This is why we hire all the staff under the roof
+                    of Home Comfort, just for your satisfaction. Our goal is to become the largest and most famous
+                    online home services platform and provide our customers with the best of services and experience.
+                </p>
+            </div>
+        </div>
+    </section>
 
+    <div class="page_width">
+        <section class="Emergency_Note">
+            <p>Quick Service On Emergency</p>
+            <p>+971 58 67 47 123</p>
+
+        </section>
+    </div>
     <!------- footer Started -------->
     <footer>
         <div class="coloumn_one">
